Fixed "Cards" so that it works with multiple selections

--- a/src/Our.Umbraco.Contentment/Our.Umbraco.Contentment.csproj
+++ b/src/Our.Umbraco.Contentment/Our.Umbraco.Contentment.csproj
@@ -392,6 +392,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="AjaxMin.xml" />
+    <Content Include="DataEditors\Cards\cards.css" />
     <Content Include="DataEditors\CheckboxList\checkbox-list.css" />
     <Content Include="DataEditors\Cards\cards.html" />
     <Content Include="DataEditors\Cards\cards.js" />
