IconPicker - moved SizeConfigurationField to its own class/file

--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -298,6 +298,7 @@
     <Compile Include="DataEditors\DataList\DataSources\PhysicalFileSystemDataSource.cs" />
     <Compile Include="DataEditors\DataList\DataSources\TimeZoneDataSource.cs" />
     <Compile Include="DataEditors\Element\ElementTypeItem.cs" />
+    <Compile Include="DataEditors\IconPicker\SizeConfigurationField.cs" />
     <Compile Include="DataEditors\Element\ElementModel.cs" />
     <Compile Include="DataEditors\Element\ElementValueConverter.cs" />
     <Compile Include="DataEditors\IconPicker\DefaultIconConfigurationField.cs" />
