--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -361,15 +361,15 @@
     <Compile Include="DataEditors\IconPicker\IconPickerSizeConfigurationField.cs" />
     <Compile Include="DataEditors\IconPicker\IconPickerValueConverter.cs" />
     <Compile Include="DataEditors\ItemPicker\AllowDuplicatesConfigurationField.cs" />
-    <Compile Include="DataEditors\ItemPicker\DisableSortingConfigurationField.cs" />
-    <Compile Include="DataEditors\ItemPicker\EnableFilterConfigurationField.cs" />
+    <Compile Include="DataEditors\_\DisableSortingConfigurationField.cs" />
+    <Compile Include="DataEditors\_\EnableFilterConfigurationField.cs" />
     <Compile Include="DataEditors\ItemPicker\EnableMultipleConfigurationField.cs" />
     <Compile Include="DataEditors\ItemPicker\ItemPickerConfigurationEditor.cs" />
     <Compile Include="DataEditors\ItemPicker\ItemPickerDataEditor.cs" />
     <Compile Include="DataEditors\ItemPicker\ItemPickerDataListEditor.cs" />
     <Compile Include="DataEditors\ItemPicker\ItemPickerTypeConfigurationField.cs" />
     <Compile Include="DataEditors\ItemPicker\ItemPickerValueConverter.cs" />
-    <Compile Include="DataEditors\ItemPicker\MaxItemsConfigurationField.cs" />
+    <Compile Include="DataEditors\_\MaxItemsConfigurationField.cs" />
     <Compile Include="DataEditors\MacroPicker\MacroPickerConfigurationEditor.cs" />
     <Compile Include="DataEditors\MacroPicker\MacroPickerDataEditor.cs" />
     <Compile Include="DataEditors\MacroPicker\MacroPickerModel.cs" />
