Cards - removed the HideLabelDataValueEditor
Leftover from initial dev prototype.

--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -353,23 +353,23 @@
     <Compile Include="DataEditors\Element\ElementModel.cs" />
     <Compile Include="DataEditors\Element\ElementTypeItem.cs" />
     <Compile Include="DataEditors\Element\ElementValueConverter.cs" />
-    <Compile Include="DataEditors\HideLabel\HideLabelConfigurationField.cs" />
-    <Compile Include="DataEditors\HideLabel\HideLabelDataValueEditor.cs" />
+    <Compile Include="DataEditors\_\ConfigurationFields\HideLabelConfigurationField.cs" />
+    <Compile Include="DataEditors\_\DataValueEditors\HideLabelDataValueEditor.cs" />
     <Compile Include="DataEditors\IconPicker\DefaultIconConfigurationField.cs" />
     <Compile Include="DataEditors\IconPicker\IconPickerConfigurationEditor.cs" />
     <Compile Include="DataEditors\IconPicker\IconPickerDataEditor.cs" />
     <Compile Include="DataEditors\IconPicker\IconPickerSizeConfigurationField.cs" />
     <Compile Include="DataEditors\IconPicker\IconPickerValueConverter.cs" />
     <Compile Include="DataEditors\ItemPicker\AllowDuplicatesConfigurationField.cs" />
-    <Compile Include="DataEditors\_\DisableSortingConfigurationField.cs" />
-    <Compile Include="DataEditors\_\EnableFilterConfigurationField.cs" />
+    <Compile Include="DataEditors\_\ConfigurationFields\DisableSortingConfigurationField.cs" />
+    <Compile Include="DataEditors\_\ConfigurationFields\EnableFilterConfigurationField.cs" />
     <Compile Include="DataEditors\ItemPicker\EnableMultipleConfigurationField.cs" />
     <Compile Include="DataEditors\ItemPicker\ItemPickerConfigurationEditor.cs" />
     <Compile Include="DataEditors\ItemPicker\ItemPickerDataEditor.cs" />
     <Compile Include="DataEditors\ItemPicker\ItemPickerDataListEditor.cs" />
     <Compile Include="DataEditors\ItemPicker\ItemPickerTypeConfigurationField.cs" />
     <Compile Include="DataEditors\ItemPicker\ItemPickerValueConverter.cs" />
-    <Compile Include="DataEditors\_\MaxItemsConfigurationField.cs" />
+    <Compile Include="DataEditors\_\ConfigurationFields\MaxItemsConfigurationField.cs" />
     <Compile Include="DataEditors\MacroPicker\MacroPickerConfigurationEditor.cs" />
     <Compile Include="DataEditors\MacroPicker\MacroPickerDataEditor.cs" />
     <Compile Include="DataEditors\MacroPicker\MacroPickerModel.cs" />
@@ -390,10 +390,10 @@
     <Compile Include="DataEditors\Toggles\TogglesDataListEditor.cs" />
     <Compile Include="Umbraco.Core\PropertyEditors\ConfigurationFieldExtensions.cs" />
     <Compile Include="Umbraco.Core\Services\ContentTypeServiceExtensions.cs" />
-    <Compile Include="DataEditors\_\EnableDevModeConfigurationField.cs" />
+    <Compile Include="DataEditors\_\ConfigurationFields\EnableDevModeConfigurationField.cs" />
     <Compile Include="DataEditors\_\IContentmentListItem.cs" />
-    <Compile Include="DataEditors\_\ReadOnlyDataValueEditor.cs" />
-    <Compile Include="DataEditors\_\ShowDescriptionsConfigurationField.cs" />
+    <Compile Include="DataEditors\_\DataValueEditors\ReadOnlyDataValueEditor.cs" />
+    <Compile Include="DataEditors\_\ConfigurationFields\ShowDescriptionsConfigurationField.cs" />
     <Compile Include="Migrations\ContentmentPlan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Trees\ContentmentTreeController.cs" />
