Added useful Components - not enabled by default
- Render property's description with Markdown
- Hides property's label

--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -290,6 +290,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Experience\HidePropertyLabelComponent.cs" />
+    <Compile Include="Experience\MarkdownPropertyDescriptionComponent.cs" />
     <Compile Include="Composing\ContentmentComponent.cs" />
     <Compile Include="Composing\ContentmentComposer.cs" />
     <Compile Include="Migrations\Install\RegisterUmbracoPackageEntry.cs" />
