--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -292,6 +292,7 @@
   <ItemGroup>
     <Compile Include="Configuration\ContentmentVersion.cs" />
     <Compile Include="DataEditors\TextInput\TextInputDataListEditor.cs" />
+    <Compile Include="Experience\DataTypeTreeCopyMenuItemComponent.cs" />
     <Compile Include="Experience\DisablePreviewComponent.cs" />
     <Compile Include="Experience\HidePropertyLabelComponent.cs" />
     <Compile Include="Experience\MarkdownPropertyDescriptionComponent.cs" />
@@ -405,6 +406,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization\ConfigurationFieldJsonSerializerSettings.cs" />
     <Compile Include="Trees\ContentmentTreeController.cs" />
+    <Compile Include="Trees\DataTypeCopy\DataTypeCopyApiController.cs" />
+    <Compile Include="Core\Services\DataTypeServiceExtensions.cs" />
     <Compile Include="Web\Controllers\EnumDataListSourceApiController.cs" />
     <Compile Include="Web\PublishedCache\DetachedPublishedElement.cs" />
     <Compile Include="Web\PublishedCache\DetachedPublishedProperty.cs" />
@@ -470,9 +473,12 @@
     <Content Include="DataEditors\_\_dev-mode.js" />
     <Content Include="DataEditors\_\_empty.html" />
     <Content Include="DataEditors\_\_json-editor.html" />
+    <Content Include="Trees\DataTypeCopy\data-type-copy.html" />
+    <Content Include="Trees\DataTypeCopy\data-type-copy.js" />
     <Content Include="Web\UI\App_Plugins\Contentment\backoffice\contentment\index.html" />
     <Content Include="Web\UI\App_Plugins\Contentment\contentment.css" />
     <Content Include="Web\UI\App_Plugins\Contentment\contentment.js" />
+    <Content Include="Web\UI\App_Plugins\Contentment\lang\en.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Umbraco.SqlServerCE.4.0.0.1\build\Umbraco.SqlServerCE.targets" Condition="Exists('..\packages\Umbraco.SqlServerCE.4.0.0.1\build\Umbraco.SqlServerCE.targets')" />
