DataList - Added a Text Delimited data-source
This had a knock-on effect for the underlying interface.
Exposed that it was missing a way to configure "default values".

This is a breaking-change, but v1.0.0 isn't released yet,
it's all part and parcel.

--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -294,6 +294,7 @@
     <Compile Include="DataEditors\ContentBlocks\ContentBlocksDisplayModeConfigurationField.cs" />
     <Compile Include="DataEditors\ContentBlocks\EnablePreviewConfigurationField.cs" />
     <Compile Include="DataEditors\ContentBlocks\ContentBlocksTypeConfiguration.cs" />
+    <Compile Include="DataEditors\DataList\DataSources\TextDelimitedDataListSource.cs" />
     <Compile Include="DataEditors\TextInput\TextInputDataListEditor.cs" />
     <Compile Include="Experience\DataTypeTreeCopyMenuItemComponent.cs" />
     <Compile Include="Experience\DisablePreviewComponent.cs" />
