--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -300,8 +300,12 @@
     <Compile Include="Core\Trees\TreeCollectionBuilderExtensions.cs" />
     <Compile Include="Core\Xml\UmbracoXPathPathSyntaxParser.cs" />
     <Compile Include="DataEditors\ConfigurationEditor\ConfigurationEditorUtility.cs" />
+    <Compile Include="DataEditors\ContentBlocks\ContentBlockPreviewView.cs" />
+    <Compile Include="DataEditors\ContentBlocks\ContentBlocksViewHelper.cs" />
     <Compile Include="DataEditors\ContentBlocks\ContentBlocksDisplayModeConfigurationField.cs" />
+    <Compile Include="DataEditors\ContentBlocks\ContentBlocksApiController.cs" />
     <Compile Include="Composing\ContentmentListItemCollectionBuilder.cs" />
+    <Compile Include="DataEditors\ContentBlocks\ContentBlockPreviewModel.cs" />
     <Compile Include="DataEditors\ContentPicker\ContentPickerDataEditor.cs" />
     <Compile Include="DataEditors\DataList\DataSources\UmbracoContentDataListSource.cs" />
     <Compile Include="DataEditors\DataList\IDataListSourceValueConverter.cs" />
@@ -387,6 +391,7 @@
     <None Include="DataEditors\CheckboxList\README.md" />
     <None Include="DataEditors\CodeEditor\README.md" />
     <None Include="DataEditors\ConfigurationEditor\README.md" />
+    <None Include="DataEditors\ContentBlocks\ContentBlockPreview.cshtml" />
     <None Include="DataEditors\DataList\README.md" />
     <None Include="DataEditors\DataTable\README.md" />
     <None Include="DataEditors\DropdownList\README.md" />
@@ -456,6 +461,9 @@
     <Content Include="Web\UI\App_Plugins\Contentment\lang\en.xml" />
     <Content Include="Web\UI\backoffice-ui-shim.css" />
     <Content Include="Web\UI\backoffice.js" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Web\UI\App_Plugins\Contentment\render\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Umbraco.SqlServerCE.4.0.0.1\build\Umbraco.SqlServerCE.targets" Condition="Exists('..\packages\Umbraco.SqlServerCE.4.0.0.1\build\Umbraco.SqlServerCE.targets')" />
